--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -173,5 +173,6 @@
     <string name="summary_problem">ملخص المشكلة</string>
     <string name="myConsultDETAILS">تفاصيل الاستشارة</string>
     <string name="select_countrycode">اختر كود الدولة</string>
-
+    <string name="satisfied">راضي</string>
+    <string name="notSatisfied">غير راضي</string>
 </resources>
